finished table-list part of the style guide

--- a/styleguide.html
+++ b/styleguide.html
@@ -11,25 +11,21 @@
 			<div class="white-bg">
 				<div class="container">
 					<h1>Style Guide (h1)</h1>
-					<h2>This is heading 2.</h2>
+					<h2>This is <a href="#">heading</a> 2.</h2>
 					<h3>This is heading 3.</h3>
 					<h4>This is heading 4.</h4>
 					<h5>This is heading 5.</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">This is a link.</a> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 			</div>
 			<div class="blue-bg">
 				<div class="container">
 					<h1>This is heading 1.</h1>
-					<h2>This is heading 2.</h2>
+					<h2>This is <a href="#">heading</a> 2.</h2>
 					<h3>This is heading 3.</h3>
 					<h4>This is heading 4.</h4>
 					<h5>This is heading 5.</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#">This is a link.</a> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 			</div>
 		</div>
@@ -38,14 +34,14 @@
 				<div class="container">
 					<h1>Buttons on a white background</h1>
 					<a class="button" href="#">Subscribe to Our Newsletter</a>
-					<a class="button" href="#">Subscribe to Our Newsletter</a>
+					<a class="button" href="#">Apply to Wireframe</a>
 				</div>
 			</div>
 			<div class="blue-bg">
 				<div class="container">
 					<h1>Buttons on a blue background</h1>
 					<a class="button" href="#">Subscribe to Our Newsletter</a>
-					<a class="button" href="#">Subscribe to Our Newsletter</a>
+					<a class="button" href="#">Apply to Wireframe</a>
 				</div>
 			</div>
 		</div>
@@ -53,66 +49,161 @@
 			<div class="white-bg">
 				<div class="container">
 					<h1>Image pullquotes on a white background</h1>
-					<figure class="image-pullquote left ex1">
-				   		<img src="http://hackcville.com/summer/images/learn.jpg" />
-				    	<figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				    	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				    	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				    	consequat.</figcaption>
-					</figure><div class="text-example">
-						<h2>This is some sample text</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div><div class="text-example">
-						<h2>This is some sample text</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div><figure class="image-pullquote right ex1">
-				   		<img src="http://hackcville.com/summer/images/whiteboard.jpg" />
-				    	<figcaption><h3>This is an h3</h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				    	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				    	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				    	consequat.</figcaption>
-					</figure>
+					<div class="flex">
+						<figure class="image-pullquote left flex-1-of-2">
+					   		<img src="http://hackcville.com/summer/images/learn.jpg" />
+					    	<figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					    	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					    	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					    	consequat.</figcaption>
+						</figure>
+						<div class="text-example flex-1-of-2">
+							<h3>This is some sample text</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+						<div class="text-example flex-1-of-2">
+							<h3>This is some sample text</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+						<figure class="image-pullquote right flex-1-of-2">
+					   		<img src="http://hackcville.com/summer/images/whiteboard.jpg" />
+					    	<figcaption><h3>This is an h3</h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					    	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					    	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					    	consequat.</figcaption>
+						</figure>
+					</div>
 				</div>
 			</div>
 			<div class="blue-bg">
 				<div class="container">
 					<h1>Image pullquotes on a blue background</h1>
-					<figure class="image-pullquote left ex1">
-				   		<img src="http://hackcville.com/summer/images/learn.jpg" />
-				    	<figcaption><h4>This is an h4</h4>With only one line of subtext</figcaption>
-					</figure><div class="text-example">
-						<h2>This is some sample text</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div><div class="text-example">
-						<h2>This is some sample text</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div><figure class="image-pullquote right ex1">
-				   		<img src="http://hackcville.com/summer/images/whiteboard.jpg" />
-				    	<figcaption>This is a really short one</figcaption>
-					</figure>
+					<div class="flex">
+						<figure class="image-pullquote left flex-1-of-2">
+					   		<img src="http://hackcville.com/summer/images/learn.jpg" />
+					    	<figcaption><h4>This is an h4</h4>With only one line of subtext</figcaption>
+						</figure>
+						<div class="text-example flex-1-of-2">
+							<h3>This is some sample text</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+						<div class="text-example flex-1-of-2">
+							<h3>This is some sample text</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+						<figure class="image-pullquote right flex-1-of-2">
+					   		<img src="http://hackcville.com/summer/images/whiteboard.jpg" />
+					    	<figcaption>This is a really short one</figcaption>
+						</figure>
+					</div>
 				</div>
 			</div>
-
+		</div>
+		<div class="table-list">
+			<div class="white-bg">
+				<div class="container">
+					<h1>Table List on White Background</h1>
+					<div class="flex">
+						<div class="flex-1-of-2 list-heading">
+							<h3>Meeting Times</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<p>Lorem ipsum dolor sit amet, <span class="important">consectetur adipisicing elit,</span> sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+						</div>
+						<div class="flex-1-of-2 list-heading">
+							<h3>Fees</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+						</div>
+						<div class="flex-1-of-2 list-heading">
+							<h3>Eligibility</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+						</div>
+					</div>
+					<div class="cta">
+						<a class="button" href="#"><h2>Apply</h2></a>
+						<a class="button" href="#"><h2>Remind Me</h2></a>
+					</div>
+				</div>
+			</div>
+			<div class="blue-bg">
+				<div class="container">
+					<h1>Table List on Blue Background</h1>
+					<div class="flex">
+						<div class="flex-1-of-2 list-heading">
+							<h3>Meeting Times</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<p>Lorem ipsum dolor sit amet, <span class="important">consectetur adipisicing elit,</span> sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+						</div>
+						<div class="flex-1-of-2 list-heading">
+							<h3>Fees</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+						</div>
+						<div class="flex-1-of-2 list-heading">
+							<h3>Eligibility</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
+						</div>
+					</div>
+					<div class="cta">
+						<a class="button" href="#"><h2>Apply</h2></a>
+						<a class="button" href="#"><h2>Remind Me</h2></a>
+					</div>
+				</div>
+			</div>
 		</div>
 
 	</div>
