created feature icons and section border

--- a/styleguide.html
+++ b/styleguide.html
@@ -9,7 +9,7 @@
 	<div class="style-guide">
 		<div class="text-samples">
 			<div class="white-bg">
-				<div class="container">
+				<div class="container section-border">
 					<h1>Style Guide (h1)</h1>
 					<h2>This is <a href="#">heading</a> 2.</h2>
 					<h3>This is heading 3.</h3>
@@ -19,7 +19,7 @@
 				</div>
 			</div>
 			<div class="blue-bg">
-				<div class="container">
+				<div class="container section-border">
 					<h1>This is heading 1.</h1>
 					<h2>This is <a href="#">heading</a> 2.</h2>
 					<h3>This is heading 3.</h3>
@@ -205,7 +205,51 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="feature-icons">
+			<div class="white-bg">
+				<div class="container section-border">
+					<h1>Feature Icons on White Background</h1>
+					<div class="flex">
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Some text is in here</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some longer and longer text in here</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some more</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some longer and longer text in here</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some more</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="blue-bg">
+				<div class="container">
+					<h1>Feature Icons on Blue Background</h1>
+					<div class="flex">
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Some text is in here</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some longer and longer text in here</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some more</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some longer and longer text in here</h3>
+						</div>
+						<div class="flex-1-of-3 feature-icon">
+							<h3>Here is some more</h3>
+						</div>
+					</div>
+				</div>
+			</div>
 	</div>
 	<hr>
 </body>
