added support for imagepullquotes into the table list

--- a/styleguide.html
+++ b/styleguide.html
@@ -5,7 +5,6 @@
 	<link type="text/css" rel='stylesheet' href="style.css"></style>
 </head>
 <body>
-	<hr>
 	<div class="style-guide">
 		<div class="text-samples">
 			<div class="white-bg">
@@ -47,7 +46,7 @@
 		</div>
 		<div class="image-pullquotes">
 			<div class="white-bg">
-				<div class="container">
+				<div class="container section-border">
 					<h1>Image pullquotes on a white background</h1>
 					<div class="flex">
 						<figure class="image-pullquote left flex-1-of-2">
@@ -146,9 +145,20 @@
 							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 							consequat.</p>
 						</div>
-						<div class="flex-1-of-2 list-heading">
-							<h3>Eligibility</h3>
+						<figure class="image-pullquote flex-1-of-2 list-heading">
+					   		<img src="http://hackcville.com/summer/images/whiteboard.jpg" />
+					    	<figcaption>This is a really short one</figcaption>
+						</figure>
+						<div class="flex-1-of-2 list-info">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat.</p>
 						</div>
+						<figure class="image-pullquote flex-1-of-2 list-heading">
+					   		<img src="http://hackcville.com/summer/images/whiteboard.jpg" />
+					    	<figcaption>This is a really short one</figcaption>
+						</figure>
 						<div class="flex-1-of-2 list-info">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -166,9 +176,10 @@
 				<div class="container">
 					<h1>Table List on Blue Background</h1>
 					<div class="flex">
-						<div class="flex-1-of-2 list-heading">
-							<h3>Meeting Times</h3>
-						</div>
+						<figure class="image-pullquote flex-1-of-2 list-heading">
+					   		<img src="http://hackcville.com/summer/images/whiteboard.jpg" />
+					    	<figcaption>This is a really short one</figcaption>
+						</figure>
 						<div class="flex-1-of-2 list-info">
 							<p>Lorem ipsum dolor sit amet, <span class="important">consectetur adipisicing elit,</span> sed do eiusmod
 							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
