created bolded list section

--- a/styleguide.html
+++ b/styleguide.html
@@ -261,6 +261,53 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="bolded-list">
+			<div class="white-bg">
+				<div class="container">
+					<h1>Bolded List</h1>
+					<div class="list">
+						<div class="list-item">
+							<img src="http://i.imgur.com/BNUezOr.png" class="icon">
+							<h4>24/7 access to our fun and functional clubhouses on Elliewood Ave.</h4>
+							<p>Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.</p>
+						</div>
+						<div class="list-item">
+							<img src="http://i.imgur.com/BNUezOr.png" class="icon">
+							<h4>24/7 access to our fun and functional clubhouses on Elliewood Ave.</h4>
+							<p>Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.</p>
+						</div>
+						<div class="list-item">
+							<img src="http://i.imgur.com/BNUezOr.png" class="icon">
+							<h4>24/7 access to our fun and functional clubhouses on Elliewood Ave.</h4>
+							<p>Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="blue-bg">
+				<div class="container">
+					<h1>Bolded List</h1>
+					<div class="list">
+						<div class="list-item">
+							<img src="http://i.imgur.com/BNUezOr.png" class="icon">
+							<h4>24/7 access to our fun and functional clubhouses on Elliewood Ave.</h4>
+							<p>Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.</p>
+						</div>
+						<div class="list-item">
+							<img src="http://i.imgur.com/BNUezOr.png" class="icon">
+							<h4>24/7 access to our fun and functional clubhouses on Elliewood Ave.</h4>
+							<p>Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.</p>
+						</div>
+						<div class="list-item">
+							<img src="http://i.imgur.com/BNUezOr.png" class="icon">
+							<h4>24/7 access to our fun and functional clubhouses on Elliewood Ave.</h4>
+							<p>Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<hr>
 </body>
