made the programs lists

--- a/all-programs.html
+++ b/all-programs.html
@@ -32,12 +32,129 @@
 		</div>
 	</div>
 
-	<div class="table-list programs-list">
+	<div class="programs-list">
 		<div class="white-bg">
 			<div class="container">
 				<h2 class="programs-list-header">
 					Here are our programs, split into two categories.
 				</h2>
+				<div class="flex">
+					<div class="flex-1-of-2">
+						<div class="bolded-list">
+							<div class="blue-bg programs-list">
+								<h3>Learn a Skill</h3>
+								<div class="list">
+									<div class="list-item">
+										<h4>
+											Vector
+										</h4>
+										<p>
+											Vector is our graphic design program. You learn design principles: Adobe Photoshop, Illustrator, and InDesign; and develop a small portfolio of work.
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Storyboard
+										</h4>
+										<p>
+											Storyboard is our video production and storytelling program. You learn skills in interviewing, filming, and editing and publish your own work to HackCville's publication, The Pioneer.
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											The Node
+										</h4>
+										<p>
+											The Node is our data science program. You learn the fundamentals of data science, how it is used to solve problems, and gain valuable technical experience.
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Wireframe
+										</h4>
+										<p>
+											Wireframe is our web design program. You learn the basics of HTML, CSS and Javascript and create your own personal space. 
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Exposure
+										</h4>
+										<p>
+											Exposure is our photography program. You learn the basics of digital photography and editing and how you can become a freelance photographer.
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Software Engineering
+										</h4>
+										<p>
+											In our software engineering program you learn a curriculum that was invented by someone who actually knows a lot about software engineering. Who knew! Lit! 								
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Digital Marketing
+										</h4>
+										<p>
+											This is our digital marketing program. Its pretty cool. You will learn skills like SEO. 
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="flex-1-of-2">
+						<div class="bolded-list">
+							<div class="blue-bg programs-list">
+								<h3>Start Something</h3>
+								<div class="list">
+									<div class="list-item">
+										<h4>
+											Hustle
+										</h4>
+										<p>
+											Hustle is our entrepreneurship program. You learn methods, mindsets, and skills essential for self starting. You'll utilize these skills through independent and community initiatives
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Spark
+										</h4>
+										<p>
+											Spark is our education, innovation, and entrepreneurship program. You learn and work on today's innovations in teacher training, ed tech, after school education, charter schools ect. 
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Ignite
+										</h4>
+										<p>
+											Ignite is our social entrepreneurship program. You explore social issues, learn to tackle real-world problems, and apply knowledge through hands-on community projects.
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Alpha
+										</h4>
+										<p>
+											Alpha is our new program for people with existing projects or projects that continue after starting in Hustle, Spark, or Ignite. We provide personalized mentorship and resources to help you continue to grow your project.
+										</p>
+									</div>
+									<div class="list-item">
+										<h4>
+											Beta
+										</h4>
+										<p>
+											Beta is our program for people with existing projects or projects that continue after starting in Hustle, Spark, or Ignite. We provide personalized mentorship and resources to help you continue to grow your project.  
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 				
 			</div>
 		</div>
