created the launch section

--- a/all-programs.html
+++ b/all-programs.html
@@ -6,6 +6,7 @@
 	<link type="text/css" rel='stylesheet' href="all-programs.css"></style>
 </head>
 <body>
+	<!-- HERO SECTION --> 
 	<div class="table-list all-programs">
 		<div class="blue-bg all-programs-hero">
 			<div class="container">
@@ -31,7 +32,7 @@
 			</div>
 		</div>
 	</div>
-
+	<!-- PROGRAMS LIST --> 
 	<div class="programs-list">
 		<div class="white-bg">
 			<div class="container">
@@ -156,6 +157,28 @@
 				</div>
 
 				
+			</div>
+		</div>
+	</div>
+	<!-- LAUNCH --> 
+	<div class="launch-section">
+		<div class="blue-bg">
+			<div class="container section-border">
+				<h1>
+					Launch
+				</h1>
+				<h5 class="launch-caption-white">
+					Get paid to learn coding, web design, marketing, or data science this summer.
+				</h5>
+				<h5 class="launch-caption-black">
+					Become a software engineer, web designer, marketer, or data scientist and experience an immersive summer internship at a top Charlottesville startup. Best of all, we'll pay you $1,000 to do it, all 12 weeks of the summer.
+				</h5>
+				<div class="flex">
+					<div class="flex-1-of-2 launch-image launch-image-left">
+					</div>
+					<div class="flex-1-of-2 launch-image launch-image-right">
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
