--- a/all-programs.html
+++ b/all-programs.html
@@ -165,21 +165,101 @@
 		<div class="blue-bg">
 			<div class="container section-border">
 				<h1>
-					Launch
+					Launch: Our Summer Program
 				</h1>
-				<h5 class="launch-caption-white">
-					Get paid to learn coding, web design, marketing, or data science this summer.
-				</h5>
-				<h5 class="launch-caption-black">
-					Become a software engineer, web designer, marketer, or data scientist and experience an immersive summer internship at a top Charlottesville startup. Best of all, we'll pay you $1,000 to do it, all 12 weeks of the summer.
-				</h5>
 				<div class="flex">
 					<div class="flex-1-of-2 launch-image launch-image-left">
 					</div>
 					<div class="flex-1-of-2 launch-image launch-image-right">
 					</div>
 				</div>
+				<h3 class="launch-caption-white">
+					Get paid to learn coding, web design, marketing, or data science this summer.
+				</h3>
+				<h5 class="launch-caption-black">
+					Become a software engineer, web designer, marketer, or data scientist and experience an immersive summer internship at a top Charlottesville startup. Best of all, we'll pay you $1,000 to do it, all 12 weeks of the summer.
+				</h5>
+				<a class="launch-button button" href="#launch">
+					More info
+				</a>
 			</div>
+		</div>
+	</div>
+	<!-- EVENTS SECTION -->
+	<div class="events-section">
+		<div class="white-bg">
+			<div class="container section-border">
+				<h1>
+					Checkout Upcoming Events
+				</h1>
+				<div class="events-section-center">
+					<h2>
+						<span class="blue">
+							Want to just get your feet wet with HackCville?
+						</span>
+					</h2>
+					<h2>
+						Subscribe to our events page to keep updated with what is happening each week.
+					</h2>
+					<a class="button" href="#subscribe">Subscribe to our Newsletter</a>
+					<h2 class="upcoming-events">
+						Upcoming Events:
+					</h2>
+				</div>
+				<div class="flex">
+					<div class="flex-1-of-4">
+						<img src="">
+					</div>
+					<div class="flex-1-of-4">
+						<h5>
+							Event 1
+						</h5>
+						<p>
+							things about this event which is going to be a super cool event 
+						</p>
+					</div>
+					<div class="flex-1-of-4">
+						
+					</div>
+					<div class="flex-1-of-4">
+						<h5>
+							Event 2
+						</h5>
+						<p>
+							things about this event which is going to be a super cool event 
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- PERKS OF MEMBERSHIP -->
+	<div class="bolded-list membership-section">
+		<div class="blue-bg">
+			<div class="container">
+				<h1>
+					Perks of Membership
+				</h1>
+				<h3>
+					After you complete your first HackCville program, you're granted HackCville membership. Here's what you get:
+				</h3>
+				<div class="list-item">
+					<h4>
+						24/7 access to our fun and functional clubhouses on Elliewood Ave.
+					</h4>
+					<p>
+						Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.
+					</p>
+				</div>
+				<div class="list-item">
+					<h4>
+						Exclusive events and job opportunities.
+					</h4>
+					<p>
+						Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.
+					</p>
+				</div>
+			</div>	
 		</div>
 	</div>
 </body>
