--- a/all-programs.html
+++ b/all-programs.html
@@ -243,21 +243,47 @@
 				<h3>
 					After you complete your first HackCville program, you're granted HackCville membership. Here's what you get:
 				</h3>
-				<div class="list-item">
-					<h4>
-						24/7 access to our fun and functional clubhouses on Elliewood Ave.
-					</h4>
-					<p>
-						Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.
-					</p>
-				</div>
-				<div class="list-item">
-					<h4>
-						Exclusive events and job opportunities.
-					</h4>
-					<p>
-						Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.
-					</p>
+				<div class="list">
+					<div class="list-item">
+						<h4>
+							24/7 access to our fun and functional clubhouses on Elliewood Ave.
+						</h4>
+						<p>
+							Our two clubhouses are filled with hammocks, couches, whiteboards, and WiFi. Use our space to work on your projects, hold meetings, or just hang out.
+						</p>
+					</div>
+					<div class="list-item">
+						<h4>
+							Exclusive events and job opportunities.
+						</h4>
+						<p>
+							Whether it's drinks with the co-founder of Reddit or HackCville-only internship, job, and freelancing opportunites, we give our members access to dozens of unique experiences every year.
+						</p>
+					</div>
+					<div class="list-item">
+						<h4>
+							A community that feels like a family.
+						</h4>
+						<p>
+							You'll join HackCville's 300-member community of the most talented and badass people in Charlottesville.
+						</p>
+					</div>
+					<div class="list-item">
+						<h4>
+							Early access to HackCville programs, no application required.
+						</h4>
+						<p>
+							Want to take another program? As a member, you can just sign up - no application required. We open up spots to members before the public.
+						</p>
+					</div>
+					<div class="list-item">
+						<h4>
+							Priority application for our summer program, Launch.
+						</h4>
+						<p>
+							Get paid to learn web design, software development, marketing or data science in our 12 week summer program. You'll get trained by HackCville's expert instructors and get a garanteed, paid internship at a local startup.
+						</p>
+					</div>
 				</div>
 			</div>	
 		</div>
