add some responsiveness

--- a/launch-overview.html
+++ b/launch-overview.html
@@ -25,20 +25,20 @@
 -->
     
     <div class="blue-bg">
-  <div class="twinkling"></div>
-  <div class="hero-container">
-  <div class='ship-container'>
-    <img class="ship" src="HC Launch-02.png">
-  </div><div class="text">
-    <h1>Get paid to learn this summer.</h1>
-    <p>Choose from six immersive tracks spanning from Videography to Coding to Web Design. Experience an immersive summer internship at a top Charlottesville startup. Get paid $1300 to do it. Training begins Spring 2018.</p>
-    <a class="button" href="#">Learn More</a>
-    <a class="button applynow" href="#">Apply Now</a>
-  </div><div class='ship-container'>
-    <img class="moon" src="HC Launch-01.png">
-  </div>
-  </div>
-</div>
+        <div class="twinkling"></div>
+        <div class="hero-container">
+            <div class='ship-container'>
+                <img class="ship" src="HC Launch-02.png">
+            </div><div class="text">
+                <h1>Get paid to learn this summer.</h1>
+                <p>Choose from six immersive tracks spanning from Videography to Coding to Web Design. Experience an immersive summer internship at a top Charlottesville startup. Get paid $1300 to do it. Training begins Spring 2018.</p>
+                <a class="button learnmore" href="#">Learn More</a>
+                <a class="button applynow" href="#">Apply Now</a>
+            </div><div class='moon-container'>
+                <img class="moon" src="HC Launch-01.png">
+            </div>
+        </div>
+    </div>
 
     
     <div class="hi">
