--- a/all-programs.html
+++ b/all-programs.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>All Programs</title>
 	<link type="text/css" rel='stylesheet' href="style.css"></style>
 	<link type="text/css" rel='stylesheet' href="all-programs.css"></style>
 </head>
 <body>
 	<!-- HERO SECTION --> 
 	<div class="table-list all-programs">
-		<div class="blue-bg all-programs-hero">
+		<div class="white-bg all-programs-hero">
 			<div class="container">
-				<div class="all-programs-hero-border">
-					<div class="all-programs-caption">
-						<h2 class="all-programs-hero-header">
-							HackCville's Programs
-						</h2>
-						<p>
-							HackCville offers free 12-week programs in everything from entrepreneurship to photography to data science. We'll help you learn modern skills through fun, hands-on projects in a fast-paced, community driven environment.
-						<br>
-						<br>
-							Our programs are open to any UVa student (undergrad/grad) or Charlottesville resident 18+. Once you complete your first HackCville program, you're granted HackCville membership which comes with many of the perks detailed below. 
-						<br>
-						<br>
-							<span class="bold">
-								Applications for Fall 2017 programs are open August 18 and close Monday August 28 at 11:59pm.
-							</span> 
-							Links to our applications can be found on specific program pages below. You may apply to up to two programs, but if you are selected for both you must pick only one to participate in.
-						</p>
-					</div>
+				<div class="container drop-top-hero">
+					<h1 class="head-txt uppers">Semester Programs</h1> <!-- make this a white heading, but keep blue button-->
+					<p class="head-txt closer">HackCville offers free 10-week programs in everything from entrepreneurship to photography to data science. We'll help you learn modern skills through fun, hands-on projects in a fast-paced, community driven environment.
+					<br>
+					<br>
+					Applications for Fall 2017 programs are open August X and close Tuesday, September X at 11:59pm.</p>
+					<a class="button" href="apply">apply</a>
 				</div>
 			</div>
 		</div>
@@ -39,67 +28,68 @@
 				<h2 class="programs-list-header">
 					Here are our programs, split into two categories.
 				</h2>
+				<p class="description">Semester programs are open to any UVA student (undergrad/grad) or Charlottesville resident 18+.</p>
 				<div class="flex">
 					<div class="flex-1-of-2">
 						<div class="bolded-list">
-							<div class="blue-bg programs-list">
+							<div class="white-bg programs-list">
 								<h3>Learn a Skill</h3>
 								<div class="list">
 									<div class="list-item">
-										<h4>
-											Vector
-										</h4>
-										<p>
-											Vector is our graphic design program. You learn design principles: Adobe Photoshop, Illustrator, and InDesign; and develop a small portfolio of work.
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Vector:</span>
+										graphic design
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Storyboard
-										</h4>
-										<p>
-											Storyboard is our video production and storytelling program. You learn skills in interviewing, filming, and editing and publish your own work to HackCville's publication, The Pioneer.
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Storyboard:</span>
+										video production
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											The Node
-										</h4>
-										<p>
-											The Node is our data science program. You learn the fundamentals of data science, how it is used to solve problems, and gain valuable technical experience.
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">The Node:</span>
+										data science
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Wireframe
-										</h4>
-										<p>
-											Wireframe is our web design program. You learn the basics of HTML, CSS and Javascript and create your own personal space. 
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Wireframe:</span>
+										web design
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Exposure
-										</h4>
-										<p>
-											Exposure is our photography program. You learn the basics of digital photography and editing and how you can become a freelance photographer.
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Exposure:</span>
+										digital photography
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Software Engineering
-										</h4>
-										<p>
-											In our software engineering program you learn a curriculum that was invented by someone who actually knows a lot about software engineering. Who knew! Lit! 								
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">SWE:</span>
+										software engineering
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Digital Marketing
-										</h4>
-										<p>
-											This is our digital marketing program. Its pretty cool. You will learn skills like SEO. 
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Marketing:</span>
+										digital marketing
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 								</div>
 							</div>
@@ -107,80 +97,134 @@
 					</div>
 					<div class="flex-1-of-2">
 						<div class="bolded-list">
-							<div class="blue-bg programs-list">
+							<div class="white-bg programs-list">
 								<h3>Start Something</h3>
 								<div class="list">
 									<div class="list-item">
-										<h4>
-											Hustle
-										</h4>
-										<p>
-											Hustle is our entrepreneurship program. You learn methods, mindsets, and skills essential for self starting. You'll utilize these skills through independent and community initiatives
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Hustle:</span>
+										general entrepreneurship
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Spark
-										</h4>
-										<p>
-											Spark is our education, innovation, and entrepreneurship program. You learn and work on today's innovations in teacher training, ed tech, after school education, charter schools ect. 
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Ignite:</span>
+										social entrepreneurship
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Ignite
-										</h4>
-										<p>
-											Ignite is our social entrepreneurship program. You explore social issues, learn to tackle real-world problems, and apply knowledge through hands-on community projects.
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Spark:</span>
+										education innovation
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Alpha
-										</h4>
-										<p>
-											Alpha is our new program for people with existing projects or projects that continue after starting in Hustle, Spark, or Ignite. We provide personalized mentorship and resources to help you continue to grow your project.
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Beta:</span>
+										develop an existing idea
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 									<div class="list-item">
-										<h4>
-											Beta
-										</h4>
-										<p>
-											Beta is our program for people with existing projects or projects that continue after starting in Hustle, Spark, or Ignite. We provide personalized mentorship and resources to help you continue to grow your project.  
+										<img src="images/house-icon.png" class="icon">
+										<p><span class="bold">Alpha:</span>
+										develop a new idea
 										</p>
+										<br>
+										<a href="">more info &#8594;</a>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+				</div>				
+			</div>
+		</div>
+	</div>
+	<div class="testimonial">
+		<div class="hc-blue-bg">
+			<div class="container">
+				<div class="flex">
+					<figure class="image-pullquote right flex-1-of-3">
+						<img src="images/katie.jpg" class="profile">
+						<figcaption>
+							<p><span class="bold">Katie Mendenall</span></p>
+							<p>HackCville member</p>
+						</figcaption>
+					</figure>
+					<p class="flex-2-of-3" id="quote">"I love that HackCville provides a support network for students. HackCville has helped me learn a lot, and it's also provided me with a lot of resume/internship guidance I know will be useful. It's a good feeling to be surrounded by people with similar goals."</p>
 				</div>
-
-				
+			</div>
+		</div>
+	</div>
+	<div class="application-process">
+		<div class="table-list">
+			<div class="blue-bg">
+				<div class="container applications">
+					<h1>Application Process</h1>
+					<h3 id="ital">Applications due by Thursday, Sept X</h3>
+					<div class="flex">
+						<div class="flex-1-of-2 list-heading">
+							<h3>1</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<h3><span class="important">Fill out an application - accessible via links above<span></h3>
+							<p>Each program has their own initial Typeform application that you can access and fill out from their individual websites. The application will ask basic questions (i.e. year, major, etc.), as well as longer questions to understand why you would like to join the HackCville community. You may apply to no more than two programs (should you be accepted to both, you must choose one).</p>
+						</div>
+						<div class="flex-1-of-2 list-heading">
+							<h3>2</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<h3><span class="important">HackCville Staff will review your application<span></h3>
+							<p>After you submit your application, it will be reviewed by current HackCville staff members, all of which are students (with the exception of our two full-time staff members). Staff members blind themselves to all names, emails, and demographic information to minimize any bias. Three staff members will review each application.</p>
+						</div>
+						<div class="flex-1-of-2 list-heading">
+							<h3>3</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<h3><span class="important">Called back for an interview<span></h3>
+							<p>After staff members score and rank the applications, the top applicants are invitd back to interview with two HackCville members. These two members will score the interview and compare them to the application scores in order to make a final decision.</p>
+						</div>
+						<div class="flex-1-of-2 list-heading">
+							<h3>4</h3>
+						</div>
+						<div class="flex-1-of-2 list-info">
+							<h3><span class="important">Final decisions<span></h3>
+							<p>If you are accepted, CONGRATS! HackCville will notify you a few days after your interview. If not, don't worry! Applications are available every semester and there are other ways to be involved in the HackCville community. All startup trips and events that are open to the public are posted on our website. We look forward to seeing you around our clubhouses!</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 	<!-- LAUNCH --> 
 	<div class="launch-section">
-		<div class="blue-bg">
+		<div class="white-bg">
 			<div class="container section-border">
 				<h1>
-					Launch: Our Summer Program
+					Check out our summer program... Launch
 				</h1>
+				<h3>
+					Get paid to learn coding, web design, marketing, or data science this summer.
+				</h3>
+				<h5>
+					Become a software engineer, web designer, marketer, or data scientist and experience an immersive summer internship at a top Charlottesville startup. Best of all, we'll pay you $1,000 to do it, all 12 weeks of the summer.
+				</h5>
 				<div class="flex">
 					<div class="flex-1-of-2 launch-image launch-image-left">
 					</div>
 					<div class="flex-1-of-2 launch-image launch-image-right">
 					</div>
 				</div>
-				<h3 class="launch-caption-white">
-					Get paid to learn coding, web design, marketing, or data science this summer.
-				</h3>
-				<h5 class="launch-caption-black">
-					Become a software engineer, web designer, marketer, or data scientist and experience an immersive summer internship at a top Charlottesville startup. Best of all, we'll pay you $1,000 to do it, all 12 weeks of the summer.
-				</h5>
 				<a class="launch-button button" href="#launch">
-					More info
+					Learn More
 				</a>
 			</div>
 		</div>
@@ -190,18 +234,14 @@
 		<div class="white-bg">
 			<div class="container section-border">
 				<h1>
-					Checkout Upcoming Events
+					<span class="blue">
+						Want to just get your feet wet with HackCville?
+					</span>
 				</h1>
 				<div class="events-section-center">
-					<h2>
-						<span class="blue">
-							Want to just get your feet wet with HackCville?
-						</span>
-					</h2>
-					<h2>
+					<h4>
 						Subscribe to our events page to keep updated with what is happening each week.
-					</h2>
-					<a class="button" href="#subscribe">Subscribe to our Newsletter</a>
+					</h4>
 					<h2 class="upcoming-events">
 						Upcoming Events:
 					</h2>
@@ -219,7 +259,7 @@
 						</p>
 					</div>
 					<div class="flex-1-of-4">
-						
+						<img src="">
 					</div>
 					<div class="flex-1-of-4">
 						<h5>
@@ -230,13 +270,16 @@
 						</p>
 					</div>
 				</div>
+				<div class="events-section-center">
+					<a class="button" href="#subscribe">Subscribe to our Newsletter</a>
+				</div>
 			</div>
 		</div>
 	</div>
 	<!-- PERKS OF MEMBERSHIP -->
 	<div class="bolded-list membership-section">
 		<div class="blue-bg">
-			<div class="container">
+			<div class="container memberships">
 				<h1>
 					Perks of Membership
 				</h1>
