Responsiveness added to All Programs Page

--- a/all-programs.html
+++ b/all-programs.html
@@ -4,6 +4,7 @@
 	<title>All Programs</title>
 	<link type="text/css" rel='stylesheet' href="style.css"></style>
 	<link type="text/css" rel='stylesheet' href="all-programs.css"></style>
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<!-- HERO SECTION --> 
