Finalized All Programs Page

--- a/all-programs.html
+++ b/all-programs.html
@@ -329,7 +329,38 @@
 						</p>
 					</div>
 				</div>
-			</div>	
+			</div>
+			<div class="container section-border extra-opportunities">
+				<h1>Extra Opportunities Available in Every Program</h1>
+				<div class="flex">
+					<div class="flex-1-of-2">
+						<h3>Mentorship</h3>
+						<p>Looking for some guidance on how to navigate what you want to do? Every year we pair up hundreds of UVA alumni from across the country with our students to provide guidance and support. Our team also meets with you several times one-on-one to ensure you're getting the most out of your program. It's advising that actually works.</p>
+						<img src="" class="extra-opp-image-left">
+					</div>
+					<div class="flex-1-of-2">
+						<h3>Startup Trips</h3>
+						<p>HackCville hosts immersive trips to cities across the country (New York City, San Francisco, Baltimore, and more) to tour companies, meet alumni, and give students networking opportunities with industry leaders. Trips are where you see how what you're learning is put into action in the real world.</p>
+						<img src="" class="extra-opp-image-right">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="testimonial">
+		<div class="hc-blue-bg">
+			<div class="container">
+				<div class="flex">
+					<figure class="image-pullquote right flex-1-of-3">
+						<img src="images/katie.jpg" class="profile">
+						<figcaption>
+							<p><span class="bold">Katie Mendenall</span></p>
+							<p>HackCville member</p>
+						</figcaption>
+					</figure>
+					<p class="flex-2-of-3" id="quote">"I love that HackCville provides a support network for students. HackCville has helped me learn a lot, and it's also provided me with a lot of resume/internship guidance I know will be useful. It's a good feeling to be surrounded by people with similar goals."</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
