--- a/styleguide.html
+++ b/styleguide.html
@@ -9,7 +9,7 @@
 		<div class="text-samples">
 			<div class="white-bg">
 				<div class="container">
-					<h1>HackCville Style Guide + Framework</h1>
+					<h1>HackCville Style Guide / Framework</h1>
 					<h2>This is <a href="#">heading</a> 2, with a link.</h2>
 					<h3>These are just samples of how text is sized.</h3>
 					<h4>This is heading 4.</h4>
